--- a/projects.html
+++ b/projects.html
@@ -20,18 +20,20 @@
     </nav>
     <h1>My Projects</h1>
     <h2>Find the links to my projects below:</h2>
-    <p><li><a href="https://codeclan-d5b59.web.app/">1. A Virtual Study Group Web App</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/chat-connect-website/">1. A Social Network for Mental Health Website - Chat Connect</a></li></p>
+    <p><li><a href="https://codeclan-d5b59.web.app/">2. A Virtual Study Group Web App</a></li></p>
     <!--<div><img src=""></div>-->
-    <p><li><a href="https://mahlathi-js.github.io/Mzamomtsha-Primary-School-Website/">2. Mzamomtsha Primary School Website</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/quizzapplication/">3. Quizz Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/stock-management-website/">4. Stock Management Website</a></li></p>
-    <p><li><a href="https://yamkelas-realtime-chat-app98.herokuapp.com/">5. Real-time Chat Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/simplecalculator/">6. A Simple Calculator</a></li></p>
-    <p><li><a href="https://todo-list-app01.herokuapp.com/">7. To-do List Application</a></li></p>
-    <p><li><a href="https://angular-46pubs-ny75yg.stackblitz.io/">8. Store Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/notepad/">9. Notepad Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/animated-car/">10. Animated Car using HTML and CSS</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/javascipt-statistics-program/">11. JavaScript Application to Calculate Statistics</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/Mzamomtsha-Primary-School-Website/">3. Mzamomtsha Primary School Website</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/quizzapplication/">4. Quizz Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/stock-management-website/">5. Stock Management Website</a></li></p>
+    <p><li><a href="https://yamkelas-realtime-chat-app98.herokuapp.com/">6. Real-time Chat Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/simplecalculator/">7. A Simple Calculator</a></li></p>
+    <p><li><a href="https://todo-list-app01.herokuapp.com/">8. To-do List Application</a></li></p>
+    <p><li><a href="https://angular-46pubs-ny75yg.stackblitz.io/">9. Store Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/browser-permission-buttons/">10. Browser Permission Buttons</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/notepad/">11. Notepad Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/animated-car/">12. Animated Car using HTML and CSS</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/javascipt-statistics-program/">13. JavaScript Application to Calculate Statistics</a></li></p>
 
 </body>
 </html>
