--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,14 @@
     <p><li><a href="https://mahlathi-js.github.io/quizzapplication/">4. Quizz Application</a></li></p>
     <p><li><a href="https://mahlathi-js.github.io/stock-management-website/">5. Stock Management Website</a></li></p>
     <p><li><a href="https://yamkelas-realtime-chat-app98.herokuapp.com/">6. Real-time Chat Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/simplecalculator/">7. A Simple Calculator</a></li></p>
-    <p><li><a href="https://todo-list-app01.herokuapp.com/">8. To-do List Application</a></li></p>
-    <p><li><a href="https://angular-46pubs-ny75yg.stackblitz.io/">9. Store Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/browser-permission-buttons/">10. Browser Permission Buttons</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/notepad/">11. Notepad Application</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/animated-car/">12. Animated Car using HTML and CSS</a></li></p>
-    <p><li><a href="https://mahlathi-js.github.io/javascipt-statistics-program/">13. JavaScript Application to Calculate Statistics</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/unichat-web-app/">7. UniChat Web Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/simplecalculator/">8. A Simple Calculator</a></li></p>
+    <p><li><a href="https://todo-list-app01.herokuapp.com/">9. To-do List Application</a></li></p>
+    <p><li><a href="https://angular-46pubs-ny75yg.stackblitz.io/">10. Store Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/browser-permission-buttons/">11. Browser Permission Buttons</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/notepad/">12. Notepad Application</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/animated-car/">13. Animated Car using HTML and CSS</a></li></p>
+    <p><li><a href="https://mahlathi-js.github.io/javascipt-statistics-program/">14. JavaScript Application to Calculate Statistics</a></li></p>
 
 </body>
 </html>
